# stocks_dl

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
stocks_dl/: CMakeLists.txt  boerse_frankfurt.cpp  boerse_frankfurt.hpp  boerse_frankfurt_parser.cpp  boerse_frankfurt_parser.hpp  boerse_frankfurt_sheet.cpp  boerse_frankfurt_sheet.hpp  curlwrapper.cpp  curlwrapper.hpp  decl.hpp  dividends.cpp  dividends.hpp  stocks.cpp  stocks.hpp  stocks_dl_config.h.in  table_parser.cpp  table_parser.hpp  time_day.cpp  time_day.hpp  yahoodownloader.cpp  yahoodownloader.hpp
stocks_dl/utils/: calc_expression.hpp  calculator.cpp  calculator.hpp  csv_reader.cpp  csv_reader.hpp  logger.cpp  logger.h  logger.hpp  mini_xml.cpp  mini_xml.hpp  mini_xml_decl.hpp  tnull.hpp  utils.cpp  utils.hpp
