# Copyright (C) 2019 Matthias Rosenthal
# 
# This file is part of stocks_dl.
#
# Stocks_dl is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# any later version.
#
# Stocks_dl is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with stocks_dl. If not, see <http://www.gnu.org/licenses/>
######################################################################

cmake_minimum_required (VERSION 2.6)
project (stocks_dl)

add_subdirectory(stocks_dl)
add_subdirectory(example)
